# python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
