[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.6"
attrdict

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"
prospector = {version = "^1.1",extras = ["with_mypy"]}
yapf = "^0.25.0"
bumpversion = "^0.5.3"
pytest = "^4.2"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
